Add the other xlstm value-zeroing notebooks
They were made in this order:
* 7b_notebook-valuezeroing.ipynb:
    try to stay close to Hosein's code
* 7b_notebook-valuezeroing-matmul.ipynb
    get rid of the nested loop using torch.matmul
* 7b_notebook-valuezeroing-matmul-apply.ipynb
    trying to make the previous one per-head ran into
    memory issues because that needs to save a lot of
    hidden vectors, so do the value-zeroing distance
    calculation in the nnsight loop and save just the result
* 7b_notebook-head_valuezeroing.ipynb
    and then add a per-head loop

--- a/7b_notebook-valuezeroing.ipynb
+++ b/7b_notebook-valuezeroing.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a42d6551-9c8f-40c9-a58f-1831b4847670",
    "metadata": {},
    "outputs": [],
    "source": [
     "# coding: utf-8\n",
     "import torch\n",
-    "import torch.nn.functional as F\n",
     "import numpy\n",
     "import pandas\n",
     "from nnsight import LanguageModel\n",
@@ -28,7 +27,6 @@
    "source": [
     "def forwardpass (model, prompt, tokens):\n",
     "    layers = model.backbone.blocks\n",
-    "    \n",
     "    # run the text through the model to get the baseline to\n",
     "    # calculate the differences against\n",
     "    with model.trace() as tracer:\n",
@@ -50,7 +48,7 @@
     "            with tracer.invoke(prompt) as invoker:\n",
     "                for layer_ix in range(32):\n",
     "                    layer = getattr(layers, str(layer_ix))\n",
-    "                    # set the layer input to the baseline\n",
+    "                    # set the layer input to the baseline                    \n",
     "                    layer.input[0] = hidden_state[layer_ix][0]\n",
     "                    layer_v = getattr(getattr(layer, \"mlstm_layer\"), \"v\")\n",
     "                    v_output = layer_v.output\n",
@@ -76,60 +74,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c949b336-455e-4af6-81e9-2e91747fb3d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "xLSTMForCausalLM(\n",
-       "  (backbone): xLSTMModel(\n",
-       "    (embeddings): Embedding(50304, 4096)\n",
-       "    (blocks): ModuleList(\n",
-       "      (0-31): 32 x mLSTMBlock(\n",
-       "        (norm_mlstm): RMSNorm()\n",
-       "        (mlstm_layer): mLSTMLayer(\n",
-       "          (q): Linear(in_features=4096, out_features=2048, bias=False)\n",
-       "          (k): Linear(in_features=4096, out_features=2048, bias=False)\n",
-       "          (v): Linear(in_features=4096, out_features=4096, bias=False)\n",
-       "          (ogate_preact): Linear(in_features=4096, out_features=4096, bias=False)\n",
-       "          (igate_preact): Linear(in_features=4096, out_features=8, bias=True)\n",
-       "          (fgate_preact): Linear(in_features=4096, out_features=8, bias=True)\n",
-       "          (ogate_act_fn): Sigmoid()\n",
-       "          (mlstm_backend): mLSTMBackend(mLSTMBackendConfig(chunkwise_kernel='chunkwise--triton_xl_chunk', sequence_kernel='native_sequence__triton', step_kernel='triton', mode='inference', chunk_size=64, return_last_states=True, autocast_kernel_dtype='bfloat16', eps=1e-06, inference_state_dtype='float32'))\n",
-       "          (multihead_norm): MultiHeadLayerNorm()\n",
-       "          (out_proj): Linear(in_features=4096, out_features=4096, bias=False)\n",
-       "        )\n",
-       "        (norm_ffn): RMSNorm()\n",
-       "        (ffn): FeedForward(\n",
-       "          (proj_up_gate): Linear(in_features=4096, out_features=10944, bias=False)\n",
-       "          (proj_up): Linear(in_features=4096, out_features=10944, bias=False)\n",
-       "          (proj_down): Linear(in_features=10944, out_features=4096, bias=False)\n",
-       "          (act_fn): SiLU()\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (out_norm): RMSNorm()\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=4096, out_features=50304, bias=False)\n",
-       "  (generator): Generator(\n",
-       "    (streamer): Streamer()\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "4e2584a9-c22c-428f-a209-60de3b678642",
    "metadata": {},
    "outputs": [],
@@ -139,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "92aea1de-554a-42d6-9301-c632ffc25441",
+   "execution_count": 5,
+   "id": "f8aa8648-0a7d-40e0-b021-cd6ff0191d18",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79c737d909ac4f27bb9be19efb12b608",
+       "model_id": "023875983c3c480ca134ca5db1b83a1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,13 +110,12 @@
     }
    ],
    "source": [
-    "### prompt = \"Sarah told the author about her book\"\n",
+    "#prompt = \"Sarah told the author about her book\"\n",
     "#prompt = \"The clown is playing his show tonight in the circus\"\n",
+    "prompt = \"Either you win the game, or you lose the game.\"\n",
     "#prompt = '\"I am going home,\" he said'\n",
     "#prompt = 'Elizabeth Warren (D-MA) says she disagrees with the policies'\n",
     "#prompt = 'the sum of 5 and 8 is 13'\n",
-    "prompt = \"Either you win the game, or you lose the game.\"\n",
-    "\n",
     "\n",
     "inputs = tokenizer(prompt, add_special_tokens=True)\n",
     "hidden_state, vz_hidden_state = forwardpass(model, prompt, inputs['input_ids'])\n"
@@ -180,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2b123a41-f284-4648-ba65-93290520d1c5",
    "metadata": {},
    "outputs": [],
@@ -190,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "08e824eb-fc7d-4419-9b2c-c967e25f753e",
    "metadata": {},
    "outputs": [],
@@ -199,77 +142,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fd27ed92",
-   "metadata": {},
-   "source": [
-    "### value-zeroing calculations\n",
-    "\n",
-    "use torch.matmul to do the nested for loop from the original in one step"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fab2993d-33bf-4845-bf49-0f466addc378",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# skip the last (generated) token\n",
-    "# return a LxSxSxD matrix\n",
-    "tvt = torch.stack(token_vz)[:,:,:-1].transpose(1,0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e205e1af-175e-4887-a143-d95cb2351d70",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# first hidden state were the inputs to the first layer. remove that and also the generated token\n",
-    "# normalize over the last dimension, which is the embedding\n",
-    "# (LxSxD)\n",
-    "x = F.normalize(hidden_state[1:,:-1], dim=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "feee6716-1b6d-4016-a8fd-a854394bd8eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# normalize the embedding dimension and transpose the last two dimensions for the dot-product in the next step\n",
-    "y = F.normalize(tvt, dim=-1).transpose(2,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "f01f9709-51db-4166-b794-0214e079ea8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dot product over the last two dimensions\n",
-    "# 1 - x to get the distance rather than similarity\n",
-    "C = 1 - torch.matmul(x.unsqueeze(1),y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "8e24249b-5142-4a5f-8ad8-d797ef17a8ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# take the diagonals over the matrices as defined by dimensions 3 and 4\n",
-    "score_matrix = torch.diagonal(C,0,2,3).transpose(1,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "e083f835-859e-44ff-a692-e4d19cda5034",
    "metadata": {},
    "outputs": [],
@@ -279,7 +153,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
+   "id": "7ad3feaa-fc8d-45d0-a842-e5edf01da60f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_matrix = numpy.zeros((32, seq_length, seq_length))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb933fbf",
+   "metadata": {},
+   "source": [
+    "### value-zeroing calculations\n",
+    "\n",
+    "copied and adapted from Hosein's code (https://github.com/hmohebbi/ValueZeroing/blob/57d448daf9541e88062883f8374341566e4c06ee/scoring/value_zeroing.py#L151)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6adb3e13-88f6-483c-b2ca-9ce7260521c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for l in range(32):\n",
+    "    for t in range(seq_length):\n",
+    "        # get the hidden state for each layer/token\n",
+    "        x = hidden_state[l+1][:seq_length]\n",
+    "        y = token_vz[t][l][:seq_length]\n",
+    "        # calculate the distance\n",
+    "        d1 = cosine_distances(x, y)\n",
+    "        d2 = d1.diagonal()\n",
+    "        # add to the matrix\n",
+    "        score_matrix[l,:,t] = d2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "2ef5b0ad-8631-4095-a239-3cfca5ce4756",
    "metadata": {},
    "outputs": [
@@ -287,19 +200,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.2000)\n"
+      "0.2\n"
      ]
     }
    ],
    "source": [
-    "# get the max value with some margin to set the limits on the colours in the plot later\n",
+    "# find the maximum value, and use it (rounded up) as a limit for the colour scale in our plots\n",
     "vmax = numpy.round(score_matrix.max() + 0.05, decimals=1)\n",
     "print(vmax)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "10a8aaa8-42ae-4892-9588-0ec309662ecf",
    "metadata": {},
    "outputs": [],
@@ -317,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "a7e342a1-2895-44f4-924f-517e326c92d9",
    "metadata": {},
    "outputs": [],
@@ -329,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "029ad21c-b056-4cb0-9bbd-4b834cb0be30",
    "metadata": {
     "scrolled": false
